Reindex playlist items after item deleted or moved